# diator-demo

./: Makefile  README.md  alembic.ini  pyproject.toml
meetings/: config.py  di.py
meetings/adapters/persistence/: persistence_manager.py
meetings/adapters/persistence/gateways/: __init__.py  participant_gateway.py
meetings/adapters/persistence/migrations/: env.py
meetings/adapters/persistence/migrations/versions/: 08f870cfb0b8_create_participants_table.py  4ebc732af0cd_create_users_table.py  a2b8e076eb2b_create_meetings_table.py
meetings/application/: mediator.py
meetings/application/common/dto/: participant.py
meetings/application/common/ports/gateways/: __init__.py  participant_gateway.py
meetings/application/join_meeting/: __init__.py  join_meeting_command.py  join_meeting_command_handler.py  user_joined_ecst_event.py
meetings/application/read_participants/: __init__.py  read_participants_query.py  read_participants_query_handler.py  read_participants_query_result.py
meetings/domain/common/identity/: __init__.py  protocol.py  uuid.py
meetings/interfaces/api/: asgi.py  controllers.py  serialization.py
tests/: conftest.py
