[tool.poetry]
name = "meetings"
version = "0.1.0"
description = ""
authors = ["Murad Akhundov <akhundov1murad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diator = {extras = ["azure"], version = "^0.1.2"}
dataclass-factory = "^2.16"
falcon = "^3.1.1"
rodi = "^2.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
