[tool.poetry]
name = "meetings"
version = "0.1.0"
description = ""
authors = ["Murad Akhundov <akhundov1murad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diator = { extras = ["azure"], version = "^0.1.2" }
dataclass-factory = "^2.16"
falcon = "^3.1.1"
rodi = "^2.0.2"
sqlalchemy = "^2.0.13"
blacksheep = "2.0a6"
markupsafe = "^2.1.2"
uvicorn = "^0.22.0"
setuptools = "^67.7.2"
asyncpg = "^0.27.0"
alembic = "^1.11.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
testcontainers-postgres = "^0.0.1rc1"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
